--- a/SchoolsNearMe/Content/Site.css
+++ b/SchoolsNearMe/Content/Site.css
@@ -2,6 +2,7 @@
     background-color: #e2e2e2;
     margin: 0;
     padding: 0;
+    height: 100%;
 }
 
 body {
@@ -12,6 +13,7 @@ body {
     font-family: "Segoe UI", Verdana, Helvetica, Sans-Serif;
     margin: 0;
     padding: 0;
+    height: 100%;
 }
 
 a {
